--- a/astar/astar/astar.vcxproj
+++ b/astar/astar/astar.vcxproj
@@ -77,6 +77,8 @@
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="txAstar.h" />
+    <ClInclude Include="txMap.h" />
     <ClInclude Include="txNode.h" />
   </ItemGroup>
   <ItemGroup>
@@ -85,6 +87,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="txAstar.cpp" />
+    <ClCompile Include="txMap.cpp" />
     <ClCompile Include="txNode.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
